# system-monitor

./: Cargo.toml
.github/workflows/: mobsf.yml
src/: application.rs  main.rs  window.rs
